pgbconsole (current development) unstable; urgency=low

  * Remove -O2 from Makefile, because unknown garbage appeared with log tail.
  * Fix: clear taillog screen before closing.
  * Add Makefile, manpage, license.
  * Fix ncurses mode break after edit/show config or log.
  * Add reset statistics hotkey.
  * Show tables/indexes from system view on/off toggle.
  * Split pg_stat_statements screen to timings and general screens.
  * Rewrite pg_stat_statements query with human readable timings.
  * Write conninfo into file from --file=... or to default.
  * Add desc/asc sort order changing.
  * Allow specify connections file with --file option.
  * Rewrite arg parse and init_conn funcs.
  * Add pg_stat_statements to sys screen.
  * Add colors support.
  * Add log tail screen, full log view with PAGER.
  * Add suspend/resume pgcenter execution.
  * Allow change refresh interval.
  * Add psql hotkey.
  * Add reconnect if conn failed (eg pg restart).
  * Add cancel/terminate for process group.
  * Add infrastructure for cancel/terminate group of backends.
  * Add single backend cancel or terminate.
  * Add return error message in higher function from do_query.
  * Add reload_conf() function.
  * Allow editing postgresq/pg_hba/pg_ident/recovery config files.
  * Add show config with shift+C
  * Save conninfo to .pgcenterrc file.
  * Add new conn establishing, closing existing connections.
  * When query failed, print error to w_dba window.
  * Add pg_stat_statements screen.
  * Add autovacuum process counters to sysstat.
  * Print pg process activity info in sysstat window.
  * Print conninfo in sysstat window.
  * Fix pg_stat_user_functions sort order.
  * Add pg_stat_user_functions screen.
  * Add ability to change min age interval for pg_stat_activity long queries.
  * Add cmd_readline from pgbconsole.
  * Add pg_stat_activity long queries screen (based on db_activity).
  * Add relation sizes screen (awesome feature imho).